[gd_scene load_steps=13 format=3 uid="uid://it1tfcdk48nh"]

[ext_resource type="Script" path="res://Area2DClau.gd" id="1_lq6jq"]
[ext_resource type="Script" path="res://cofretrue.gd" id="1_rrat3"]
[ext_resource type="Texture2D" uid="uid://b6gaje2clb6or" path="res://2D Chests & Coins/Key.png" id="2_0laie"]
[ext_resource type="Texture2D" uid="uid://b6vqjvraude8d" path="res://2D Chests & Coins/Chest.png" id="2_ijemg"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ntvcn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cwpl3"]
atlas = ExtResource("2_ijemg")
region = Rect2(0, 0, 21, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_lr47q"]
atlas = ExtResource("2_ijemg")
region = Rect2(0, 0, 21, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fg5g"]
atlas = ExtResource("2_ijemg")
region = Rect2(21, 0, 21, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_j4s67"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwpl3")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lr47q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fg5g")
}],
"loop": false,
"name": &"obert",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8scfc"]
size = Vector2(3.68, 2.04)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hbual"]
size = Vector2(48.4, 37.2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rict4"]
size = Vector2(20, 13)

[node name="Cofre" type="StaticBody2D"]
scale = Vector2(5, 5)
physics_material_override = SubResource("PhysicsMaterial_ntvcn")
script = ExtResource("1_rrat3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-0.35, -0.8)
scale = Vector2(0.966667, 0.911111)
sprite_frames = SubResource("SpriteFrames_j4s67")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -4.1)
scale = Vector2(5, 5)
shape = SubResource("RectangleShape2D_8scfc")

[node name="Area2DCofre" type="Area2D" parent="."]
position = Vector2(0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DCofre"]
position = Vector2(-2.4, -0.399999)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_hbual")

[node name="Area2DClau" type="Area2D" parent="."]
position = Vector2(46, 17)
script = ExtResource("1_lq6jq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DClau"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_rict4")

[node name="Clau" type="Sprite2D" parent="Area2DClau"]
position = Vector2(-1, 0)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_0laie")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2DCofre" to="." method="_on_area_2d_cofre_body_entered"]
[connection signal="body_exited" from="Area2DCofre" to="." method="_on_area_2d_cofre_body_exited"]
